Mein Diagramm überarbeitet

--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -503,7 +503,7 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 
 
 \section{Klassenbeschreibung View-Model}
-\subsection{Abstact Class BaseModeViewmodel} 
+\subsection{Abstract Class BaseModeViewmodel} 
 \paragraph{Klassenbeschreibung:}
 Die abstrakte Klasse IBaseModeViewmodel hält die Commands für Buttonclicks, die in jedem ModeViewModel benötigt werden. Die Methoden die von den Commands aufgerufen werden und die Event Methode werden in den Unterklassen implementiert. Die CheckConnection Methode wird von allen vier ModeViewmodels beim Starten eines Vorgangs aufgerufen.
 \paragraph{Attribute:}
