Beschreibungen hinzugefügt, Glossareintrag
- Beschreibung IManager
- Beschreibung IActivityManager
- Beschreibung ActivityManager
- Glossareintrag DependencyInjection (PlugIn)

--- a/Entwurf/Entwurfsdokument/Glossar.tex
+++ b/Entwurf/Entwurfsdokument/Glossar.tex
@@ -17,3 +17,5 @@
 	description={CSV steht für "Comma-Seperated-Value" ein Dateityp, bei dem die Attribute durch ein Komma getrennt werden. Eine Zeile bildet dabei immer einen Eintrag ab. Das Format ist human-readable und veränderbar.}}
 \newglossaryentry{Rg.Plugins.Popup}{name={Rg.Plugins.Popup},
 	description={Rg.Plugins.Popup ist eine Erweiterung (Plugin), welche es einem ermöglicht Pop-up Fenster zu erstellen und anzuzeigen. Dabei ist das Plugin über den Pluginmanager 'NuGet' einbindbar.}}
+\newglossaryentry{DependencyInjection}{name={Microsoft.Extensions.DependencyInjection},
+	description={Microsoft.Extensions.DependencyInjection ist eine Erweiterung, welches ermöglicht Komponenten als Services zu registrieren und sie somit abgekapselt und modularer zu betrachten. Mit Klassen, wie der ServiceCollection, oder dem ServiceProvicer, bietet die Erweiterung Microsoft.Extensions.DependencyInjection das Framework.}}
