--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -322,9 +322,48 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 
 \subsection{Erweiterungsmodul}
 	\subsubsection{Interface IManager}
+	\paragraph{Schnittstellenbeschreibung:}
+	Die Schnittstelle IManager definiert einen Service-Manager, welcher eine Menge an Services verwaltet. Dabei definiert die Schnittstelle die Methode -serviceRegistration(out collection: IServiceCollection), um die Services bei der Erstanlegung zu registrieren. Diese muss bei einer Nutzung implementiert werden. Dabei implementieren zwei Komponenten die Schnittstelle IManager. (IActivityManager, ServiceManager). Die IServiceCollection ist aus der Erweiterung \Gls{DependencyInjection}
+	
+	\paragraph{Methoden:}
+	\begin{itemize}
+		\item[-] \textbf{serviceRegistration(out collection: IServiceCollection)}\\Private Methode, welche eine IServiceCollection anlegt und die Services dort registriert. Die IServiceCollection wird zurückgegeben. 
+	\end{itemize}
 	
 	\subsubsection{Interface IActivityManager}
+	\paragraph{Schnittstellenbeschreibung:}
+	Die Schnittstelle IActivityManager erweitert die Schnittstelle IManager. Dabei definiert IActivityManager einen spezielleren Service-Manager. Dieser beinhaltet die Modi Services. Zudem definiert der IActivityManager die EventMethode OnIMUDataReceived(sender: object, args: DataEventArgs).\\
+	Die Schnittstelle ist bei der Klasse ServiceManager als Service registiert und kann über diese von anderen Komponenten in der App angesprochen werden.
+	
+	\paragraph{Attribute:}
+	\begin{itemize}
+		\item[+] \textbf{ActivityProvider: ServiceProvider}\\Das Attribut ActivityProvider ist vom Typ ServiceProvider, eine Klasse aus der Erweiterung \Gls{DependencyInjection}. Dabei sind in dieser die registrierten Services gespeichert. Über die Methode GetService<T>() bekommt man eine konkrete Instanz des Services vom Typ T zurück. 
+	\end{itemize}
+	
+	\paragraph{Methoden:}
+	\begin{itemize}
+		\item[-] \textbf{serviceRegistration(out collection IServiceCollection)}\\Die Methode wird von der Schnittstelle IManager geerbt. Diese wird benötigt, um einen ServiceProvider zu erstellen (hier für das Attribut ActivityProvider).
+		\item[+] \textbf{onIMUDataReceived(sender: object, args: DataEventArgs): void}\\Die öffentliche Methode ist eine EventMethode, welche beim EventHandler IMUDataReceived der Klasse EarablesConnection registriert wird. Die konkreten Unterklassen müssen diese implementieren. 
+	\end{itemize}
+	
 	\subsubsection{Class ActivityManager}
+	\paragraph{Klassenbeschreibung:}
+	Die Klasse ActivityManager implementiert die Schnittstelle IActivityManager. Sie ist demnach ein Service-Manager und verwaltet die Activities (Vorgängeanalysen). Über sie können die ViewModels auf die Aktivities zugreifen.\\
+	Der AktivityManager besitzt einen Service von den folgenden Typen: AbstractSitUpActivity, AbstractStepActivity, AbstractRunningActivity, AbstractPushUpActivity.\\
+	Diese werden als Singletons gespeichert, was bedeutet, dass bei einem Aufruf von GetService<IT,T> immer die gleiche Instanz von T zurückgeliefert wird.
+	
+	\paragraph{Attribute:}
+	\begin{itemize}
+		\item[+] \textbf{ActivityProvider: ServiceProvider}\\Das Attribut beinhaltet die einzelnen Services mithilfe eines Dictionaries. Wird in dem Konstruktor instanziert.
+		\item[-] \textbf{activities: List<Activity>}\\Es wird eine Liste der registrierten Aktivitäten gespeichert. Bei einer Datenweitergabe muss somit nicht jedes mal vom ActivityProvider die Anfrage kommen, wer registriert ist. 
+	\end{itemize}
+	\paragraph{Methoden:}
+	\begin{itemize}
+		\item[-] \textbf{serviceRegistration(out collection IServiceCollection): void}\\Private geerbte Methode der Schnittstelle IManager. In dieser wird eine ServiceCollection angelegt, bei der die Aktiväten registriert werden. Dabei passtiert dies mit der Methode collection.AddSingleton<IT,T>(). IT ist eine Oberklasse/Schnittstelle und T die konkrete Implementierung. IT ist in der Klasse ActivityManager immer vom Typ Activity (abstract).
+		\item[+] \textbf{OnIMUDataReceived(sender: object, args: DataEventArgs): void}\\EventMethode, welche bei dem EventHandler IMUDataReceived der Klasse EarablesConnection registriert wird. Bei dem Aufrufen der Methode werden die Daten an die gespeicherten Aktivitäten weitergegeben. Das passiert per Push-Model (Observer-Muster). Bei den Aktivitäten wir die Methode DataUpdate(data: DataEventArgs) aufgerufen mit den bekommenen Daten als Parameter.
+		\item[+] \textbf{<<create>> ActivityManager}\\Hier handelt es sich um den Konstruktor der Klasse ActivityManager. In dieser wird sich bei dem EventHandler IMUDataReceived der Klasse EarablesConnection registriert und die private Methode serviceRegistration(...) aufgerufen. Damit findet die Registrierung der Services und die Instanziierung des ActivityProviders statt.
+	\end{itemize}
+	
 	
 	\subsubsection{Class Activity}
 	
