--- a/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
+++ b/Entwurf/Entwurfsdokument/entwurfprotokoll.tex
@@ -365,7 +365,19 @@ Enthält alle relevanten Informationen die benötigt werden, falls neue Daten an
 	
 	
 	\subsubsection{Class Activity}
+	\paragraph{Klassenbeschreibung}
+	Activity ist eine abstrakte Klasse. Hierbei handelt es sich um die Aktivitätserkennungen. Dabei liefert die Klasse Activity die abstrakte Schnittstelle um Methoden vorzudefinieren. Der Algorithmus zur Aktivitätsanalyse wird in der protected abstract Methode analyse() ausgeführt, welche in den Kindsklassen implementiert werden muss.
 	
+	\paragraph{Attribute:}
+	\begin{itemize}
+		\item[+] \textbf{ActivityDone: EventHandler<ActivityArgs>}\\Bei dem EventHandler können sich die ViewModel registrieren Diese werden benachrichtigt, wenn eine Aktivität durchgeführt wurde (Schritt gelaufen, Liegestütze gemacht, etc.). Der EventHandler wird in der Methode analyse() aufgerufen. Als Argumente bei der Eventwurf wird eine Objekt des Types ActivityArgs übergeben.  
+		\item [-] \textbf{buffer: Queue <DataEventArgs>}\\In der Queue werden die ankommenden Dateneinträge gespeichert. Diese werden nach einander von dem Algorithmus in analyse() verwendet. 
+	\end{itemize}
+	\paragraph{Methoden:}
+	\begin{itemize}
+		\item[+] \textbf{DataUpdate(data: DataEventArgs): void}\\Mit dieser Methode bekommt die Aktivität die neuen Dateneinträge. Dabei ruft die Klasse ActivityManager die Methode auf, wenn sie die neuen Daten bekommt. In dieser Methode wird geschaut, ob sich ein Event bei dem EventHandler ActivityDone registriert hat. Falls ja, wird der Datensatz dem buffer hinugefügt, und der Algorithmus gestartet. Falls nicht, wird der Datensatz ignoriert.
+		\item[\#] \textbf{abstract analyse(): void}\\Der Algorithmus der Aktivitätserkennung wird in dieser Methode ausgeführt. Dabei ist dieser in den Unterklassen implementiert. 
+	\end{itemize}
 	\subsubsection{Class AbstractSitUpActivity}
 	\subsubsection{Class SitUpActivityThreshold}
 	
